# ExpressionCalc

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  expression_calc.cpp  expression_calc.h  test.sh  表达式计算器.sln
.github/workflows/: cmake.yml
example/: xCalc.cpp
src/: CMakeLists.txt  expression_calc.cpp  expression_calc.h
表达式计算器/: ClassDiagram.cd  表达式计算器.cpp  表达式计算器.vcxproj  表达式计算器.vcxproj.filters
表达式计算器/x64/Debug/: vc143.idb  表达式计算器.exe.recipe  表达式计算器.ilk
表达式计算器/x64/Debug/表达式计算器.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  表达式计算器.lastbuildstate
